update google auth

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,16 +3,19 @@
   font-size: 1.25rem;
 
   &__title {
-    font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: 550;
+    color: #1de9b6;
+    // text-transform: uppercase;
   }
 
   &__link {
-    color: #000 ;
+    color: #1de9b6 ;
     transition: all 0.25s ease-in-out 0s;
     text-decoration: none;
 
     &:hover {
-      color: var(--bs-primary);
+      color: white;
     }
   }
 }
