--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,3 +1,5 @@
 .photo-app{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Inter UI', sans-serif;
+  background-color: black;
+  // background-size: cover;
 }
